--- a/week1/sampleBioPage.html
+++ b/week1/sampleBioPage.html
@@ -6,6 +6,8 @@
         body {
           text-align: center;
           background-color: #ffbfff;
+          cursor: url("http://www.snazzyspace.com/cursorsfolder/dog-paw.png"), auto;
+
         }
         img {
           width: 250px;
